Feat: Add media querries
Make the blog responsive by adding media querries for tablet and small mobile devices

--- a/blog2.html
+++ b/blog2.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <title> Welcome to LIZZK</title>
 </head>
+<body>
   <div id="grid-container">
     <header class="blog-header">
       <div class="nav-container">
@@ -24,6 +25,8 @@
         </nav>
       </div>      
     </header>
+
+     <!-- main content area -->
     <main id="showcase-area" class="showcase-area">
       <section class="showcase showcase-blog">
         <h1>gratitude is the transport way to rediscovery</h1>  
@@ -85,7 +88,6 @@
           <ul>
             <l1><a href="index.html">Home</a></l1>
             <l1><a href="#about">About</a></l1>
-            <l1><a href="testimonials.html">Testimonials</a></l1>
             <l1><a href="#contact">Contact</a></l1>
           </ul>
         </nav> 
