--- a/blog3.html
+++ b/blog3.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <title> Welcome to LIZZK</title>
 </head>
+<body>
   <div id="grid-container">
     <header class="blog-header">
         <div class="nav-container">
@@ -22,7 +23,8 @@
               <l1><a href="#contact">Contact</a></l1>
             </ul>
           </nav>
-        </div>      
+        </div>    
+          <!--page header  -->
     </header>
     <main id="showcase-area" class="showcase-area">
       <section class="showcase showcase-blog">
@@ -37,6 +39,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil molestiae exercitationem vitae totam labore a quo nobis eveniet odit. Sed, ipsum? Placeat quia odio itaque laborum suscipit ipsum, expedita fugiat labore? Dicta porro ipsum ratione repellat amet quod obcaecati cumque!</p>
         </div>
       </section>
+      <!-- main content area -->
     </main> 
     <aside id="blog-aside" class="side-notification">
       <div class="aside-container">
@@ -85,7 +88,6 @@
           <ul>
             <l1><a href="index.html">Home</a></l1>
             <l1><a href="#about">About</a></l1>
-            <l1><a href="testimonials.html">Testimonials</a></l1>
             <l1><a href="#contact">Contact</a></l1>
           </ul>
         </nav> 
