--- a/blog4.html
+++ b/blog4.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/css/main.css">
   <title> Welcome to LIZZK</title>
 </head>
+<body>
   <div id="grid-container">
     <header class="blog-header">
       <div class="nav-container">
@@ -86,7 +87,6 @@
           <ul>
             <l1><a href="index.html">Home</a></l1>
             <l1><a href="#about">About</a></l1>
-            <l1><a href="testimonials.html">Testimonials</a></l1>
             <l1><a href="#contact">Contact</a></l1>
           </ul>
         </nav> 
