fix: correct wrong file path for css files and images

--- a/blog1.html
+++ b/blog1.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400&family=PT+Sans:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <title> Welcome to LIZZK</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <header class="blog-header">
         <div class="nav-container">
         <div class="logo">
-          <img src="/img/logo.png" alt="image of the website's logo">
+          <img src="img/logo.png" alt="image of the website's logo">
         </div>
         <nav>
           <ul class="header-list">
@@ -28,7 +28,7 @@
     <main id="showcase-area" class="showcase-area">
       <section class="showcase showcase-blog">
         <h1>The way back to the confident you</h1>  
-        <img src="/img/happy.jpg" alt="image of a confident woman">
+        <img src="img/happy.jpg" alt="image of a confident woman">
         <div class="blog-content">
           <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</p>
           <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</p>
@@ -70,7 +70,7 @@
       <div class="aside-container">
         <div class="about" id="about">
           <h2>About LizzyK</h2>
-          <img src="/img/happy.jpg" alt="Image of a happy woman">
+          <img src="img/happy.jpg" alt="Image of a happy woman">
           <p>The company was initiated in 2013 but evenually commenced online in 2018.
             The major drive being the desire to see lost individuals regain their sense of self
             and advance their lifes. we expose subscribers and insiders as we call ourselves, into
