--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;400&family=PT+Sans:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
   <title> Welcome to LIZZK</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <header class="page-header">
         <div class="nav-container">
         <div class="logo">
-          <img src="/img/logo.png" alt="image of the website's logo">
+          <img src="img/logo.png" alt="image of the website's logo">
         </div>
         <nav>
           <ul class="header-list">
@@ -40,7 +40,7 @@
           <div class="card-img">
             <a href="blog1.html">
               <figure>
-                <img src="/img/happy.jpg" alt="image of a confident woman">
+                <img src="img/happy.jpg" alt="image of a confident woman">
                 <figcaption>
                  <strong>The Way back to the confident you</strong> 
                 </figcaption>
@@ -59,7 +59,7 @@
           <div class="card-img">
             <a href="blog2.html">
               <figure>
-                <img src="/img/gratitude.jpg" alt="image of a confident woman">
+                <img src="img/gratitude.jpg" alt="image of a confident woman">
                 <figcaption>
                  <strong>Gratitude Is The Transport Way To Rediscovery</strong> 
                 </figcaption>
@@ -78,7 +78,7 @@
           <div class="card-img">
             <a href="blog3.html">
               <figure>
-                <img src="/img/selfdevelopment.jpg" alt="image of a confident woman">
+                <img src="img/selfdevelopment.jpg" alt="image of a confident woman">
                 <figcaption>
                  <strong>Strategies of self-development</strong> 
                 </figcaption>
@@ -97,7 +97,7 @@
           <div class="card-img">
             <a href="blog4.html">
               <figure>
-                <img src="/img/selfdiscovery.jpg" alt="image of a confident woman">
+                <img src="img/selfdiscovery.jpg" alt="image of a confident woman">
                 <figcaption>
                  <strong>Rediscovering the hidden you</strong> 
                 </figcaption>
@@ -147,7 +147,7 @@
       <div class="aside-container">
         <div class="about" id="about">
           <h2>About LizzyK</h2>
-          <img src="/img/happy.jpg" alt="Image of a happy woman">
+          <img src="img/happy.jpg" alt="Image of a happy woman">
           <p>The company was initiated in 2013 but evenually commenced online in 2018.
             The major drive being the desire to see lost individuals regain their sense of self
             and advance their lifes. we expose subscribers and insiders as we call ourselves, into
