--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
       </div>   
       <div class="aside-container about-wrap">
-        <div class="about" >
+        <div class="about" id="about" >
           <h2>About LizzyK</h2>
           <img src="img/happy.jpg" alt="Image of a happy woman">
           <p>The company was initiated in <strong>2013</strong>  but evenually commenced online in <strong>2018</strong>.
