fix: add underline element <u></u> to the site's typography

--- a/blog1.html
+++ b/blog1.html
@@ -47,7 +47,7 @@
         <h1>The way back to the confident you</h1>  
         <img src="img/happy.jpg" alt="image of a confident woman">
         <div class="blog-content">
-          <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</p>
+          <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum<u> dolor sit amet consectetur</u> adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</p>
           <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</p>
           <blockquote cite="https://www.lipsum.com/">Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis ea ad reiciendis, vel possimus facilis obcaecati illo magni eveniet modi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse modi eveniet labore facilis provident quidem magnam beatae magni dolor sequi? adipisicing elit. Minima soluta explicabo reiciendis voluptates omnis odit necessitatibus? Minima excepturi ducimus harum perferendis! Quo distinctio soluta illum ipsa laboriosam quibusdam ipsam et! Optio consequatur perspiciatis nobis blanditiis corporis nostrum sunt excepturi a!</blockquote>
           <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis non delectus, excepturi expedita nisi voluptatibus adipisci consequatur distinctio eos officiis. consectetur adipisicing elit. Sunt rerum ratione facere excepturi nostrum aliquam delectus, ipsa repellendus voluptatibus quisquam esse voluptates modi velit blanditiis? Asperiores alias magni molestias aspernatur iusto doloribus quae doloremque officiis tempora possimus, exercitationem deleniti velit!</p>
@@ -87,7 +87,7 @@
           <h2>About LizzyK</h2>
           <img src="img/happy.jpg" alt="Image of a happy woman">
           <p>The company was initiated in 2013 but evenually commenced online in 2018.
-            The major drive being the desire to see lost individuals regain their sense of self
+            <u>The major drive being the desire to see lost individuals regain their sense of self</u>
             and advance their lifes. we expose subscribers and insiders as we call ourselves, into
             all areas of personal rediscovery and self-development.
           </p>                  
