--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="img/happy.jpg" alt="Image of a happy woman">
           <p>The company was initiated in <strong>2013</strong>  but evenually commenced online in <strong>2018</strong>.
           <p>The company was initiated in <strong></strong>  but evenually commenced online in 2018.
-            The major drive being the desire to see lost individuals regain their sense of self
+            <u>The major drive being the desire to see lost individuals regain their sense of self</u>
             and advance their lifes. we expose subscribers and insiders as we call ourselves, into
             all areas of <em>personal rediscovery and self-development.</em>
           </p>
